Learning about hoisting and TDZ

--- a/Phase1/01_basics/index.html
+++ b/Phase1/01_basics/index.html
@@ -6,6 +6,7 @@
     <body>
         <h1 id="head-1"> Phase 1 Revision </h1>
         <button id="alert-btn"> Click Me to Change Heading !!!!</button>
+        <h2 id="Fruits-heading">Names of Fruit</h2>
     </body>
     <script src="script.js"></script>
 </html>
