Learnt and Implemented Form Events

--- a/Phase5/index.html
+++ b/Phase5/index.html
@@ -17,6 +17,13 @@
 
 <h2 id="keyStatus"> Press any key to start !</h2>
 <h1> Score:<span id="Keyscore">0</span></h1>
+
+<form id="form1">
+    <input type="text" placeholder="Username" id="username" />
+    <button type="submit">Login</button>
+    <input type="text" placeholder="Search" id="input1"/>
+    <button type="reset">Reset form</button>
+</form>
 <script src="script.js"></script>
 </body>
 </html>
